# writing-tool

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: SPEC.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs
src/features/ai/: modelProvider.ts
src/features/outline/: OutlineKanbanView.tsx  OutlineTreeView.tsx
src/lib/: db.ts  uuid.ts
src/store/: outlineStore.ts
